@@ -14,7 +14,8 @@ softsleep=1
 #an A-V desync
 
 #added by JM on reports that it improves playback smoothness
-autosync=30
+#removed again as xbmc's audio renderers should be accurate enough now.
+#autosync=30
 
 #added by JM on reports that it improves playback smoothness
 framedrop=1
